# articles_api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  run.py
.github/workflows/: master.yml
src/: exceptions.py  main.py
src/application/: article_tasks.py  artiles.py  dto.py
src/domain/events/: publisher.py
src/domain/models/: article_task.py
src/domain/repositories/: article.py  article_task.py
src/infrastructure/: config.py
src/infrastructure/database/: mappers.py  uow.py
src/infrastructure/database/mongo/repo/: articles_task.py
src/infrastructure/database/postgres/: mappers.py  models.py
src/infrastructure/database/repo/: article.py
src/infrastructure/depends/: events.py  repo.py  service_api.py
src/infrastructure/events/: publisher.py
src/infrastructure/service_api/: base.py  exceptions.py
src/infrastructure/service_api/predict_api/: models.py  service.py
src/presentation/handlers/: __init__.py
src/presentation/handlers/articles/: models.py  routes.py
src/presentation/handlers/artiles_task/: models.py  routes.py
